# chord-detection

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  multipitch.py  pyproject.toml  requirements.txt  test.py
chord_detection/: __init__.py  chord_detect.py  chromagram.py  esacf.py  frame.py  harmonic_energy.py  iterative_f0.py  multipitch.py  notes.py  periodicity.py  prime_multif0.py  wfir.py
chord_detection/camacho_kaver_oreamuno/: prime_multif0.py
chord_detection/dsp/: lowpass.py  wfir.py
chord_detection/klapuri_anssi/: iterative_f0.py  periodicity.py
chord_detection/music/: notes.py
chord_detection/stark_plumbley/: harmonic_energy.py
chord_detection/tolonen_karjalainen/: esacf.py
esacf/: __init__.py  esacf.py
tests/: gen_test_clips.py  test.py  test_key_detection.py
